# ngcolombia

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
ngcolombia/: __init__.py  _cache.py  _validacion.py  gas_data_manager.py
