[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngcolombia"
version = "0.1.1"
description = "Módulo para consultar composición química y algunas propiedades del gas natural en la red colombiana."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}  
authors = [
  { name="Ricardo Nájera Giraldo", email="ricardo.najera@udea.edu.co" },
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/RicardoNajeraG/ngcolombia" 